# previsao_de_inadimplencia

./: .gitignore  404.html  README.md  api.py  gen_home_page.py  home.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
DataLoad/: index.html
ModelTrainer/: index.html
PreprocessorBuilder/: index.html
api/: index.html
docs/: DataLoad.md  ModelTrainer.md  PreprocessorBuilder.md  gen_home_page.py  streamlit.md
docs/javascripts/: open_source.js
javascripts/: open_source.js
pages/: app.py  painel.py
search/: search_index.json
streamlit/: index.html
