[project]
name = "previsao-inadimplencia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.7.0",
    "ipykernel>=7.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mlflow>=3.10.1",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "plotly>=6.7.0",
    "pymdown-extensions>=10.21.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
]
